--- a/index.html
+++ b/index.html
@@ -12,39 +12,28 @@
         background-color: #0f172a; /* Slate 900 */
         color: white;
         overflow: hidden;
-        touch-action: none; /* Prevent pull-to-refresh on mobile */
-        -webkit-touch-callout: none; /* iOS Safari */
-        -webkit-user-select: none; /* Chrome/Safari/Opera */
-        user-select: none;
-      }
-      /* Custom scrollbar for consistency */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #1e293b;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #475569;
-        border-radius: 4px;
-      }
-      .no-select {
+        touch-action: none; 
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         user-select: none;
       }
+      ::-webkit-scrollbar { width: 8px; }
+      ::-webkit-scrollbar-track { background: #1e293b; }
+      ::-webkit-scrollbar-thumb { background: #475569; border-radius: 4px; }
+      .no-select { -webkit-touch-callout: none; -webkit-user-select: none; user-select: none; }
     </style>
   <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
