--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "pg": "https://esm.sh/pg@^8.16.3"
   }
 }
 </script>
