--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
       ::-webkit-scrollbar-thumb { background: #475569; border-radius: 4px; }
       .no-select { -webkit-touch-callout: none; -webkit-user-select: none; user-select: none; }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@18.2.0",
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+    "pg": "https://esm.sh/pg@8.11.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "pg": "https://esm.sh/pg@^8.16.3"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
