--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
     "pg": "https://esm.sh/pg@8.11.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.88.0"
   }
 }
 </script>
